--- a/css/main.css
+++ b/css/main.css
@@ -140,37 +140,44 @@ body {
 }
 @-webkit-keyframes ani {
     0% {
-        -webkit-transform: translate3d(0.08em, -0.5em, 0);
-        transform: translate3d(0.08em, -0.5em, 0);
-        text-shadow: -0.08em 0.08em #FDDB3D;
-        color: black;
-      }
-      30% {
-        -webkit-transform: translate3d(0.08em, -0.5em, 0);
-        transform: translate3d(0.08em, -0.5em, 0);
-        text-shadow: -0.08em 0.08em #FDDB3D;
-        color: black;
-      }
-      70% {
-        -webkit-transform: translate3d(0.08em, -0.5em, 0);
-        transform: translate3d(0.08em, -0.5em, 0);
-        text-shadow: -0.08em 0.08em #D7D1FF;
-        color: black;
-      }
-      80% {
-        -webkit-transform: translate3d(0.08em, -0.5em, 0);
-        transform: translate3d(0.08em, -0.5em, 0);
-        text-shadow: -0.08em 0.08em #000000;
-        color: black;
-      }
-      
-      100% {
-        -webkit-transform: translate3d(0.08em, -0.5em, 5em);
-        transform: translate3d(0.08em, -0.5em, 0);
-        text-shadow: -0.08em 0.08em #C5E8CD;
-        color: black;
-      }
-}
+      -webkit-transform: translate3d(0, -0.08em, 0);
+      transform: translate3d(0, -0.08em, 0);
+      text-shadow: 0em 0em 0 #FDDB3D;
+      color: black;
+    }
+    30% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      text-shadow: 0em 0em 0 #D7D1FF;
+      color: black;
+    }
+    70% {
+      -webkit-transform: translate3d(0.08em, -0.5em, 0);
+      transform: translate3d(0.08em, -0.5em, 0);
+      text-shadow: -0.08em 0.08em #D7D1FF;
+      color: black;
+    }
+    80% {
+      -webkit-transform: translate3d(0.20em, -1em, 10rem);
+      transform: translate3d(0.20em, -1em, 10rem);
+      text-shadow: -0.08em 0.08em #FDDB3D;
+      color: black;
+    }
+    
+    80% {
+      -webkit-transform: translate3d(0.20em, -1em, 10rem);
+      transform: translate3d(0.20em, -1em, 10rem);
+      text-shadow: -0.08em 0.08em #7FD2F5;
+      color: black;
+    }
+  
+    100% {
+      -webkit-transform: translate3d(0.5em, -2em, 5em);
+      transform: translate3d(0.5em, -2em, 5em);
+      text-shadow: -0.08em 0.08em #C5E8CD;
+      color: black;
+    }
+  }
 @keyframes ani {
   0% {
     -webkit-transform: translate3d(0, -0.08em, 0);
