--- a/css/base.css
+++ b/css/base.css
@@ -274,6 +274,11 @@ a.link {
 	color: var(--color-bg);
 }
 
+.highlight {
+  background-color: var(--color-text);
+	color: var(--color-bg);
+}
+
 .callout {
 	border: 1px solid var(--color-text); padding: 1rem;
 }
